--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,43 +1,28 @@
+# Xamarin.Android
+# Build a Xamarin.Android project.
+# Add steps that test, sign, and distribute an app, save build artifacts, and more:
+# https://docs.microsoft.com/azure/devops/pipelines/languages/xamarin
 
-phases:
-- phase: Packages
-  variables:
-    NUGET_PACKAGES: $(Agent.WorkFolder)\.nuget
-    NUGET_HTTP_CACHE_PATH: $(Agent.WorkFolder)\.nuget-http-cache
+trigger:
+- master
 
-  steps:
-  - checkout: self
-    clean: true
-    lfs: true
+pool:
+  vmImage: 'macos-latest'
 
-  - task: GitVersion@3
-    inputs:
-      updateAssemblyInfo: false
+variables:
+  buildConfiguration: 'Release'
+  outputDirectory: '$(build.binariesDirectory)/$(buildConfiguration)'
 
-  - task: NuGetToolInstaller@0
-    inputs:
-      versionSpec: 4.3.0
-      checkLatest: false
+steps:
+- task: NuGetToolInstaller@1
 
-  - task: NuGetCommand@2
-    inputs:
-      command: restore
-      solution: src/MyApp.sln
-      selectOrConfig: select
-      includeNuGetOrg: true
-      verbosityRestore: Normal
+- task: NuGetCommand@2
+  inputs:
+    restoreSolution: '**/*.sln'
 
-  - task: MSBuild@1
-    inputs:
-      solution: src/MyApp.sln
-      msbuildLocationMethod: version
-      msbuildVersion: latest
-      msbuildArchitecture: x86
-      msbuildArguments: /p:Configuration=Release "/p:Platform=Any CPU" /detailedsummary "/p:PackageVersion=$(GITVERSION.FullSemVer)" "/p:InformationalVersion=$(GITVERSION.InformationalVersion)"
-      clean: false
-      maximumCpuCount: true
-      restoreNugetPackages: false
-      logProjectEvents: false
-      createLogFile: false
-
-
+- task: XamarinAndroid@1
+  inputs:
+    projectFile: '**/*droid*.csproj'
+    outputDirectory: '$(outputDirectory)'
+    configuration: '$(buildConfiguration)'
+    
